<resources>
    <string name="app_name">L\'école des loustics</string>
    <string name="mainActWelcomMessage">Bienvenue sur l\'application de l\'école des loustics</string>
    <string name="MainActWhoMessage">Qui est-tu ?</string>
    <string name="levelSelectActChangeUser">Changer d\'utilisateur</string>
    <string name="previous_button_text">Précédent</string>
    <string name="next_button_text">Suivant</string>
    <string name="userimage">Image de profil</string>
    <string name="Validate_text">Valider</string>
    <string name="Back_text">Retour</string>
    <string name="mainActiCreateProfile">Créer un profil</string>
    <string name="actNewProfileTitle">Créer un nouveau profil</string>
    <string name="actNewProfileNamePlaceholder">Votre nom</string>
    <string name="actNewProfileFirstnamePlaceholder">Votre prénom</string>
    <string name="mathematicsTitle">Les Mathématiques</string>
    <string name="categorieSelectionTitle">Quelle matière veux-tu travailler ?</string>
    <string name="resultCorrectionButtonText">Voir mes réponses</string>
    <string name="QuestionsAnswersButtonTitle">Questions / Réponses</string>
    <string name="QuestionsAnswersLevelSelectTitle">Questions / Réponses</string>
    <string name="QuestionLabelText">Question :</string>
</resources>