<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProfileActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/actNewProfileTitle"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/new_profile_img"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:contentDescription="@string/userimage"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/new_profile_firstname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/actNewProfileFirstnamePlaceholder"/>

    <EditText
        android:id="@+id/new_profile_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/actNewProfileNamePlaceholder"/>

    <Button
        android:id="@+id/new_profile_create_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainActiCreateProfile"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:onClick="createUser"
        />

</LinearLayout>