<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mathematics.ResultActivity"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/result_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="10sp"/>

    <TextView
        android:id="@+id/result_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\?/10"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/result_correction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resultCorrectionButtonText"
        android:textSize="20sp"
        android:layout_marginTop="20sp"/>

    <Button
        android:id="@+id/result_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Back_text"
        android:textSize="20sp"
        android:layout_marginTop="10sp"/>

</LinearLayout>