<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LevelSelect">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="switchUser"
                android:text="@string/levelSelectActChangeUser" />

            <LinearLayout
                android:id="@+id/level_select_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categorieSelectionTitle"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/level_select_mathematics_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mathematicsTitle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/level_select_questions_answers_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/QuestionsAnswersButtonTitle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
