<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Exercices.mathematics.OperationActivity">

    <TextView
        android:id="@+id/operation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/operation_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\?/10"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/operation_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30sp"
        android:paddingBottom="30sp"
        android:gravity="center">

        <TextView
            android:id="@+id/operation_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\? + \? = "
            android:gravity="center"
            android:textSize="26sp"/>

        <EditText
            android:id="@+id/operation_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="\?"
            android:inputType="number"
            android:textSize="26sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/operation_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_button_text"
            android:width="150sp"
            android:layout_marginRight="10sp"/>

        <Button
            android:id="@+id/operation_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            android:width="150sp"
            android:layout_marginLeft="10sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/operation_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Validate_text"
        app:backgroundTint="@color/blue"/>

    <TextView
        android:id="@+id/operation_advice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:textSize="15dp"
        android:textStyle="italic" />


</LinearLayout>